crates/formatter/tests/snapshots/snapshots__synapse__main__delta__73__05old_push_actions.sqlite.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
/* Copyright 2022 The Matrix.org Foundation C.I.C
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *    http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

-- On SQLite we must be in monolith mode and updating the database from Synapse,
-- so its safe to assume that `event_push_actions_staging` should be empty (as
-- over restart an event must either have been fully persisted or we'll
-- recalculate the push actions)
delete from event_push_actions_staging;

-- Add a column so that we know when a push action was inserted, to make it
-- easier to clear out old ones.
alter table event_push_actions_staging add column inserted_ts bigint;
